--- a/.github/workflows/packaging.yml
+++ b/.github/workflows/packaging.yml
@@ -139,7 +139,7 @@ jobs:
         cp -Rf `find ./ -maxdepth 1 -type d ! -path './openwrt' ! -path './'` openwrt
         cd openwrt
         source build/common/common.sh && Package_amlogic
-        echo "date=$(date "+%Y%m%d%H%M%S")" >> ${GITHUB_ENV}
+        echo "date=$(date "+%Y.%m.%d-%H%M")" >> ${GITHUB_ENV}
         echo "date_tg=$(date +"%Y.%m%d.%H%M")" >> ${GITHUB_ENV}
          
     - name: 上传固件在 github Artifacts
